<resources>
    <string name="app_name">QuoteSpire</string>



    <!--Navigation Drawer Header-->
    <string name="navigation_drawer_header_text">Your Quotes Portal</string>


    <!--Navigation Drawer-->
        <!--Groups-->
    <string name="random">Random</string>
    <string name="search">Search</string>
    <string name="personal">Personal</string>
        <!--List items-->
    <string name="quote_of_the_day">QUOTE  OF  THE  DAY</string>
    <string name="search_quotes">Search Quotes</string>
    <string name="random_quote_pictures">Random Quote Pictures</string>
    <string name="search_quote_pictures">Search Quote Pictures</string>
    <string name="random_quotes">Random Quotes</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>


    <!--Navigation drawer fragment - Quote of the Day-->
    <string name="dashboard">Dashboard</string>
    <string name="also_from">Also from </string>
    <string name="also_on">Also on </string>
    <string name="no_internet_connection">* Unable to fetch quote! *</string>
    <string name="no_quotes_from_author">* There are no more quotes from this author *</string>

    <string name="search_quotes_keyword">Search Keyword</string>
    <string name="search_quotes_category">Search Category</string>
    <string name="search_quotes_author">Search Author</string>
    <string name="search_quotes_advanced">Search Advanced</string>

    <string name="search_pictures_of_quotes_random">Search Random</string>
    <string name="search_pictures_of_quotes_category">Search Category</string>
    <string name="search_pictures_of_quotes_author">Search Author</string>


    <string name="my_quotes">My Quotes</string>

    <string name="title_activity_main">QuoteSearch</string>




    <string name="action_settings">Settings</string>
    <string name="new_quote_of_the_day_title">New Quote of The Day</string>



    <!--Favorites (Navigation Drawer)-->
    <string name="remove_all">Remove all</string>
        <!--FavoriteQuotesFragment (Swip Tab fragment)-->
    <string name="no_favorite_quotes_text">There are no Favorite Quotes...</string>
        <!--FavoriteQuotePicturesFragment (Swip Tab fragment)-->
    <string name="no_favorite_quote_pictures_text">There are no Favorite Quote Pictures...</string>


    <!--RandomQuotesFragment-->
    <string name="randomize">Randomize</string>



    <!--SearchQuotes Navigation Drawer-->
    <string name="search_quotes_fragment_title">Search Quotes</string>
    <string name="clear_all">Clear All</string>
    <string name="unable_to_fetch_quote">* Unable to Fetch quote! *</string>

    <!--SearchQuotesByKeywordFragment-->
    <string name="search_quotes_by_keyword_search_view_hint">Search by Keyword or Phrase</string>
    <string name="search_quotes_by_keyword_search_suggestions">KEYWORD search suggestions...</string>



    <!--SearchQuotesByCategoryFragment-->
    <string name="search_quotes_by_category_search_view_hint">Search by Category</string>
    <string name="category_search_suggestions">CATEGORY search suggestions...</string>

    <!--SearchQuotesByAuthorFragment-->
    <string name="search_quotes_by_author_search_view_hint">Search by Author</string>
    <string name="author_search_suggestions">AUTHOR search suggestions...</string>

    <!--SearchQuotesByAdvancedFragment-->
    <string name="search_quotes_by_advanced_search_view_hint">Search by Advanced</string>
    <string name="advanced_search_suggestions">ADVANCED search suggestions...</string>


    <!--SearchQuotePicturesByCategoryFragment-->
    <string name="search_quote_pictures_by_category_search_view_hint">Search by Category</string>
    <string name="search_quote_pictures_by_author_search_view_hint">Search by Author</string>


    <!--QuotePictureDetailActivity-->
    <string name="quote_picture">Quote Picture</string>


    <!--MyQuotesFragment-->
    <string name="add_new_quote">Add New Quote</string>
    <string name="remove_all_my_quotes">Remove All</string>
    <string name="no_my_quotes_text">There are no Quotes...</string>
    <string name="add_quote">Add Quote</string>
    <string name="author">Author</string>
    <string name="quote">Quote</string>
    <string name="save_edit">Save</string>
    <string name="delete_quote">Delete Quote</string>



    <!--SettingsFragment-->
    <string name="contents_preference_category_key">contents_preference_category_key</string>
    <string name="contents_preference_category_key_title">Contents</string>
    <string name="clear_queries_preference_key">clear_queries_preference_key</string>
    <string name="clear_queries_preference_title">Clear Queries</string>
    <string name="clear_queries_preference_summary">Clear all recent search queries</string>


    <string name="quote_of_the_day_preference_category_key">quote_of_the_day_preference_category_key</string>
    <string name="quote_of_the_day_preference_category_title">Quote of The Day</string>
    <string name="daily_notification_checkbox_preference_key">daily_notification_checkbox_preference_key</string>
    <string name="daily_notification_checkbox_preference_title">Daily Notification</string>
    <string name="daily_notification_checkbox_preference_summary">Notify me when a new Quote of The Day is available</string>

    <string name="check_time_preference_key">quote_of_the_day_check_time_preference_key</string>
    <string name="check_time_preference_title">Check Time</string>
    <string name="check_time_preference_summary">When to check if a new Quote of The Day is available: </string>



    <string name="general_preference_category_key">general_preference_category_key</string>
    <string name="general_preference_category_title">General</string>

    <string name="share_app_preference_key">share_app_preference_key</string>
    <string name="share_app_preference_title">Share App</string>
    <string name="share_app_preference_summary">Tell your friends about this app</string>
    <string name="share_app_implicit_intent_subject">Share QuoteSpire app</string>
    <string name="share_quote_implicit_intent_text">Try Quote Studio app and stay inspired everyday. https://play.google.com/store/apps/details?id=com.tieutech.android.QuoteSpire</string>
    <string name="share_app_implicit_intent_chooser_text">Share QuotesSpire via</string>

    <string name="about_app_preference_key">about_app_preference_key</string>
    <string name="about_app_preference_title">About App</string>
    <string name="about_app_preference_summary">Information about this app</string>


    <!--QuotePictureDetailFragment AND FavoriteQuotePictureDetailFragment-->
    <string name="toggle_favorites">Toggle Favorites</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>






</resources>
