<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="@string/contents_preference_category_key"
        android:title="@string/contents_preference_category_key_title">
        <!--<Preference-->
            <!--android:key="@string/application_theme_preference"-->
            <!--android:title="@string/application_theme"-->
            <!--android:summary="@string/theme_info"/>-->
        <Preference
            android:key="@string/clear_queries_preference_key"
            android:title="@string/clear_queries_preference_title"
            android:summary="@string/clear_queries_preference_summary"/>
    </PreferenceCategory>




    <PreferenceCategory
        android:key="@string/quote_of_the_day_preference_category_key"
        android:title="@string/quote_of_the_day_preference_category_title">

        <CheckBoxPreference
            android:key="@string/daily_notification_checkbox_preference_key"
            android:title="@string/daily_notification_checkbox_preference_title"
            android:summary="@string/daily_notification_checkbox_preference_summary"
            android:defaultValue="true"/>
        <Preference
            android:key="@string/check_time_preference_key"
            android:title="@string/check_time_preference_title"
            android:dependency="@string/daily_notification_checkbox_preference_key"
            android:summary="@string/check_time_preference_summary"/>
    </PreferenceCategory>



    <PreferenceCategory
        android:key="@string/general_preference_category_key"
        android:title="@string/general_preference_category_title">

        <Preference
            android:key="@string/share_app_preference_key"
            android:title="@string/share_app_preference_title"
            android:summary="@string/share_app_preference_summary"/>
        <Preference
            android:key="@string/about_app_preference_key"
            android:title="@string/about_app_preference_title"
            android:summary="@string/about_app_preference_summary"/>
    </PreferenceCategory>


</PreferenceScreen>