<?xml version="1.0" encoding="utf-8"?>

<!--Layout for the List Items of the Navigation Drawer-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--Dashboard (list item) (belongs to no groups)-->
    <group
        android:id="@+id/list_group_dashboard"
        android:checkableBehavior="single">
        <item
            android:id="@+id/quote_of_the_day_quote_title"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />
    </group>



    <!--Random (group)-->
        <item
            android:title="@string/random">

            <menu>

                <group android:checkableBehavior="single">

                    <!--Random Quotes (list item)-->
                    <item
                        android:id="@+id/random_quotes"
                        android:icon="@drawable/ic_menu_random_quotes"
                        android:title="@string/random_quotes"/>

                    <!--Random Quote Pictures (list item)-->
                    <item
                        android:id="@+id/random_quote_pictures"
                        android:icon="@drawable/ic_menu_random_quote_pictures"
                        android:title="@string/random_quote_pictures"/>

                </group>

            </menu>
        </item>



    <!--Search (group)-->
        <item
            android:title="@string/search">
            <menu>
                <group android:checkableBehavior="single">

                    <!--Search Quotes (list item)-->
                <item
                    android:id="@+id/search_quotes"
                    android:icon="@drawable/ic_menu_search_quotes"
                    android:title="@string/search_quotes"/>

                    <!--Search Quote Pictures (list item)-->
                <item
                    android:id="@+id/search_quote_pictures"
                    android:icon="@drawable/ic_menu_search_quote_pictures"
                    android:title="@string/search_quote_pictures"/>

                </group>
            </menu>
        </item>



    <!--Personal (group)-->
        <item
            android:title="@string/personal">
            <menu>
                <group android:checkableBehavior="single">

                    <!--My Quote (list item)-->
                    <item
                        android:id="@+id/my_quotes"
                        android:icon="@drawable/ic_menu_my_quotes"
                        android:title="@string/my_quotes"/>

                    <!--Favorites (list item)-->
                    <item
                        android:id="@+id/favorites"
                        android:icon="@drawable/ic_menu_favorites"
                        android:title="@string/favorites"/>

                </group>
            </menu>
        </item>



    <!--Settings (list item) (belongs to no groups)-->
    <group
        android:id="@+id/list_group_settings"
        android:checkableBehavior="single">
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
    </group>


</menu>