<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="130dp"
        android:gravity="top|right"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/quote_picture_detail_fragment_favorite_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:tooltipText="@string/toggle_favorites"/>


        <Button
            android:id="@+id/quote_picture_detail_fragment_share_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_button_share"
            android:tooltipText="@string/share"/>

        <Button
            android:id="@+id/quote_picture_detail_fragment_download_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_button_download"
            android:tooltipText="@string/download"/>
    </LinearLayout>



    <ImageView
        android:id="@+id/quote_picture_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="-120dp"/>

</LinearLayout>